First stab at adding accounts config
Signed-off-by: David Caro <me@dcaro.es>

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,10 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+
+bootRun {
+	jvmArgs = [
+		"-Dspring.config.additional-location=file:../home-lab-secrets/home_automation/expenses/"
+	]
+}
