--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active: local
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/expenses
