--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,16 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// Needed to sign digital signatures for wise accounts
+	implementation 'org.bouncycastle:bcprov-jdk15on:1.64'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.64'
+
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.16'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
-//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'mysql:mysql-connector-java'
 }
