--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
     username: "expenses"
     password: "dummypass"
   data.rest.basePath: "/api"
+management:
+  endpoint:
+    health:
+      show-details: always
