ci: add verbose running
Signed-off-by: David Caro <me@dcaro.es>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
           path: "expenses-server"
       - name: start app
         run: |
+          set -x
           cd expenses-server
           ./scripts/start_devdb.sh populate
 
