ci: first api tests
Signed-off-by: David Caro <me@dcaro.es>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,10 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Podman
+      - name: Install packages
         run: |
           sudo apt update
-          sudo apt-get -y install podman
+          sudo apt-get -y install podman python3-virtualenv jq
+          python -m virtualenv tests-venv
+          source tests-venv/bin/activate
+          pip install bats-core-pkg
       - name: Get source
         uses: actions/checkout@v3
         with:
@@ -22,11 +25,15 @@ jobs:
         run: |
           set -x
           cd expenses-server
-          ./scripts/start_devdb.sh populate
+          ./scripts/start_devdb.sh
 
           # fake accoutns config
           mkdir -p ../home-lab-secrets/home_automation/expenses/
           echo "accounts-config: {'accounts': []}" > ../home-lab-secrets/home_automation/expenses/application-accounts.yml
 
-          podman run --rm mariadb 
-          ./scripts/start_dev.sh
+          ./scripts/start_dev.sh notail
+      - name: run tests
+        run: |
+          source tests-venv/bin/activate
+          cd expenses-server
+          bats_core_pkg --verbose-run --trace api-tests/
