--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,7 @@
 # FROM --platform=arm64 docker.io/library/gradle:jdk11
 # In dev we use x86, in prod we use arm64 (raspberry)
-FROM docker.io/library/gradle:jdk11
+FROM --platform=amd64 docker.io/library/gradle:jdk11
+ENV GRADLE_USER_HOME=/src/.gradle
 EXPOSE 8080/tcp
 USER 1000
 WORKDIR /src
